# colon3d

./: .gitignore  README.md  depth_demo.ipynb  environment.yml  matplotlibrc  plot_example_frame.py  pyproject.toml  requirements.txt  run_col_nav_all.py  run_endo_sfm_train.py  run_exps_ColonNav.py  run_sfm_train.py  run_slam_all.py  run_zhang_all.py  setup.py  show_frame.py  sources.md  strgz.py  temp.txt  test_poses.py
EndoSfMLearner/: eval_depth.py  loss_functions.py  test_vo.py  train.py  utils.py
EndoSfMLearner/datasets/: pair_folders.py  sequence_folders.py
EndoSfMLearner/models/: resnet_encoder2.py
OLD/: OLD.txt  create_Zhang22.py  depth_and_ego_models.py  endosfm_trainer.py  endosfm_transforms.py  loader_Zhang22.py  md2_trainer.py  md2_transforms.py  run_exps_Zhang22.py
OLD/endo_sfm/: logger.py  loss_functions.py  run_inference.py  utils.py
OLD/monodepth2/: evaluate_depth.py  options.py  test_simple.py  utils.py
OLD/sc_depth/: sc_depth_v3.py  test.py  train.py  visualization.py
OLD/tryouts/: test_hubber.py  test_peanlizer.py
OLD/tsdf_fusion/: README.md  demo.py  fusion.py
colon3d/: alg_settings.py  archive.text  archive.txt  bundle_adjust.py  camera_util.py  create_video.py  data_util.py  depth_demo.ipynb  depth_egomotion.py  depth_util.py  detections_util.py  examine_deph_estimator.py  examine_depths.py  general_util.py  keypoints_util.py  modify_video.py  perfomance_metrics.py  rotations_util.py  run_col_nav_all.py  run_col_nav_all_temp.py  run_data_prep.py  run_exp_col_nav.py  run_exps_ColonNav.py  run_exps_SimCol3D.py  run_exps_Zhang22.py  run_on_modified_vids.py  run_on_scene.py  run_on_sim_dataset.py  run_on_sim_scene.py  run_sfm_train.py  run_slam.py  run_slam_on_scene.py  run_slam_on_sim.py  run_slam_on_sim_dataset.py  run_slam_on_sim_example.py  run_slam_on_sim_scene.py  run_train.py  run_trivial.py  run_zhang_all.py  show_depth_est.py  (+12 more)
colon3d/alg/: alg_settings.py  bundle_adjust.py  constraints_terms.py  depth_and_ego_models.py  keypoints_util.py  monocular_est_loader.py  slam_alg.py  slam_out_analysis.py  tracks_loader.py
colon3d/data_import/: create_target_cases.py  import_sim_dataset.py  vid_manipluate.py  vid_manipulate.ipynb
colon3d/import_from_sim/: archive.txt  create_examples.py  create_scenes_with_targets.py  create_scenes_with_tracks.py  import_from_sim.py  sim_importer.py  simulate_tracks.py
colon3d/net_train/: OLD.txt  common_transforms.py  custom_transforms.py  endo_sfm_trainer.py  endo_sfm_transforms.py  endosfm_trainer.py  endosfm_transforms.py  fcb_former_model.py  loss_terms.py  md2_dataset.py  md2_options.py  md2_trainer.py  md2_transforms.py  md_dataset.py  run_sfm_train.py  run_train.py  scene_dataset_util.py  scenes_dataset.py  shared_transforms.py  train_utils.py
colon3d/sim_import/: create_ColonNav.py  create_ColonNav_dataset.py  create_SimCol3D.py  create_SimCol3D_dataset.py  create_Zhang22.py  create_cases.py  create_scenes_with_tracks.py  create_target_cases.py  import_dataset.py  import_from_sim.py  import_sim_dataset.py  load_ColonNav.py  load_colon_nav_sim.py  load_sim_col_3d.py  load_zhang_data.py  loader_ColonNav.py  loader_SimCol3D.py  loader_Zhang22.py  prep_ColonNav_dataset.py  prep_data_col_nav.py  sim_importer.py  sim_load_colon_nav_sim.py  sim_load_simcol3d.py  sim_load_zhang.py  simulate_tracks.py  vid_manipulate.ipynb
colon3d/slam/: alg_settings.py  bundle_adjust.py  slam_alg copy_kp_pd.txt  slam_alg.py  slam_out_analysis.py
colon3d/unity_import/: create_examples.py  import_from_sim.py  new_sim_importer.py  old_sim_importer.py  sim_import_util.py  simulate_tracks.py
colon3d/util/: archive.txt  camera_info.py  data_util.py  depth_egomotion.py  general_util.py  keypoints_util.py  perf_metrics.py  perf_metrics_SimCol.py  perf_metrics_simcol3d.py  performance_metrics.py  pix_coord_util.py  pose_transforms.py  rotations_util.py  torch_util.py  transforms_util.py
colon3d/utils/: camera_util.py  data_util.py  depth_egomotion.py  general_util.py  keypoints_util.py  perfomance_metrics.py  performance_metrics.py  pix_coord_util.py  rotations_util.py  torch_util.py  tracks_util.py  transforms_util.py
colon3d/vid_mod/: analyze_results.py  create_mod_vids.py  modify_video.py  run_on_modified_vids.py  run_results_analysis.py
colon3d/visuals/: aided_nav_plot.py  animate_util.py  create_3d_obj.py  fuse_3d_surface.py  plot_aided_nav.py  plot_depth_video.py  plot_example_frame.py  plot_frame.py  plot_nav_aid.py  plots_2d.py  plots_3d_scene.py
colon_nav/: depth_demo.ipynb  examine_depths.py  run_exps_ColonNav.py  run_exps_SimCol3D.py  run_exps_Zhang22.py  run_on_scene.py  run_on_sim_dataset.py  run_on_sim_scene.py  run_train.py  show_frame.py  show_slam_out.py  test_poses.py
colon_nav/alg/: alg_settings.py  bundle_adjust.py  constraints_terms.py  depth_and_ego_models.py  keypoints_util.py  monocular_est_loader.py  slam_alg.py  slam_out_analysis.py
colon_nav/data_import/: create_ColonNav.py  create_SimCol3D.py  create_Zhang22.py  create_target_cases.py  (+7 more)
endo_sfm/: custom_transforms.py  dataset_loading.py  inverse_warp.py  loss_functions.py  run_inference.py  train.py  utils.py
endo_sfm_learner/: custom_transforms.py  dataset_loading.py  inverse_warp.py  logger.py  loss_functions.py  run_inference.py  test_disp.py  train.py  utils.py
monodepth2/: depth_prediction_example.ipynb  evaluate_depth.py  evaluate_pose.py  export_gt_depth.py  kitti_utils.py  layers.py  options.py  train.py  trainer.py  utils.py
sc_depth/: config.py  data_modules.py  inference.py  requirements.txt  sc_depth.py  sc_depth_v2.py  sc_depth_v3.py  setup.py
tryouts/: kp_extractor.py  kp_extractor.txt  test_hubber.py  test_peanlizer.py
tsdf_fusion/: demo.py
(+118 files in other folders)
