[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colon3d"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"


[tool.ruff]
line-length = 120
target-version = "py311"
fix = true
# Avoid trying to fix these errors:
unfixable = [
  "E711",  # None comparison
  "F841",  #  local variable is assigned to but never used
  "ARG001", # Unused argument
] 
exclude = [
    ".git",
    'node_modules',
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
  # flake8-2020
  "YTT",
  # flake8-annotations
  "ANN",
  # flake8-blind-except
  "BLE",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-commas
  "COM",
  # flake8-comprehensions
  "C4",
  # flake8-datetimez
  "DTZ",
  # flake8-debugger
  "T10",
  # flake8-implicit-str-concat
  "ISC",
  # flake8-no-pep420
  "INP",
  # flake8-pie
  "PIE",
  # flake8-pyi
  "PYI",
  # flake8-pytest
  "PT",
  # flake8-quotes
  "Q",
  # flake8-raise
  "RSE",
  # flake8-return
  "RET",
  # flake8-self
  "SLF",
  # flake8-simplify
  "SIM",
  # tidy imports
  "TID",
  # flake8-type-checking imports
  "TCH",
  # flake8-unused-arguments
  "ARG",
  # flake8-use-pathlib
  "PTH",
  # pandas-Vet
  "PD",
  # pygrep-hooks
  "PGH",
  # Pylint
  "PLC", "PLE", "PLR", "PLW",
  # tryceratops
  "TRY",
  # NumPy-specific rules (
  "NPY",
  # Ruff-specific rules
  "RUF",
  # flakke8-type-checking
  "TCH",
]

# Ruff ignores, see https://beta.ruff.rs/docs/rules/
ignore = ["E501", # line too long (let Black handle this)
          "PLR2004", # Magic value used in comparison, consider using a constant
          "PLR0913", # too many arguments
          "PLR0913", # Too many arguments to function call
          "PLR0912", # Too many branches
          "PLR0915", # Too many statements
          "ANN201", #  Missing return type annotation for public function
          "ANN204", # Missing return type annotation
          "W293", # Blank line contains whitespace
          "Q000", #  bad quotes
          "N806", #  variable in function should be lowercase
          "N802", #  function name should be lowercase
          "N803", #  argument name should be lowercase
          "N813", #  camelcase imported as lowercase
          "RET504", #  Unnecessary variable assignment before return statement
          "TRY003", # Avoid specifying long messages outside the exception class
          "TRY301", # raise-within-try
          "PT018", # assetion should be broken into multiple lines
          "ANN001", # Missing type annotation
          "ANN101", # Missing type annotation for class attribute
          "ANN002", # Missing type annotation 
          "ANN003", # Missing type annotation 
          "ANN202", # Missing type annotation
          "N812", # lowercase imported as uppercase
          "UP017", # Use datetime.UTC alias
          "NPY002", # Replace legacy `np.random.seed` call with `np.random.Generator`
          "N999", # Invalid module name
          "C419", # Unnecessary list comprehension 
          "PLR0911", # Too many return statements
]

